# Signaloid-Demo-WebPerformance-ProbabilisticLighthouseScoring

./: .gitignore  README.md  TODO.md  params.json  pyproject.toml
api/: README.md  example.env  package.json
api/src/: client.ts  config.ts  extract.ts  index.ts  pipeline.ts  types.ts  utils.ts
distributions/: README.md
inputs/: cls.txt  fcp.txt  lcp.txt  si.txt
scripts/: extract.py  run_audit.py
src/: config.mk  main.cpp
